vm/snapshots/arrays-primitives-basic-char_array-CharArrayOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
All char array tests passed
----- STDERR -----
