vm/snapshots/arrays-primitives-bounds-get_out_of_bounds-GetOutOfBoundsErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.primitives.bounds.get_out_of_bounds.GetOutOfBoundsErrMain.main(GetOutOfBoundsErrMain.java:6)
