vm/snapshots/arrays-primitives-bounds-set_out_of_bounds-SetOutOfBoundsErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.primitives.bounds.set_out_of_bounds.SetOutOfBoundsErrMain.main(SetOutOfBoundsErrMain.java:6)
