vm/snapshots/arrays-primitives-create_array_with_negative_size_should_throw_err-CreateArrayWithNegativeSizeShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NegativeArraySizeException: -1
	at arrays.primitives.create_array_with_negative_size_should_throw_err.CreateArrayWithNegativeSizeShouldThrowErrMain.main(CreateArrayWithNegativeSizeShouldThrowErrMain.java:5)
