vm/snapshots/arrays-primitives-get_negative_array_index_should_throw_err-GetNegativeArrayIndexShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index -1 out of bounds for length 1
	at arrays.primitives.get_negative_array_index_should_throw_err.GetNegativeArrayIndexShouldThrowErrMain.main(GetNegativeArrayIndexShouldThrowErrMain.java:5)
