vm/snapshots/arrays-primitives-get_out_of_bound_array_index_should_throw_err-GetOutOfBoundArrayIndexShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index 2 out of bounds for length 1
	at arrays.primitives.get_out_of_bound_array_index_should_throw_err.GetOutOfBoundArrayIndexShouldThrowErrMain.main(GetOutOfBoundArrayIndexShouldThrowErrMain.java:6)
