vm/snapshots/arrays-primitives-set_negative_array_index_should_throw_err-SetNegativeArrayIndexShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArrayIndexOutOfBoundsException: Index -1 out of bounds for length 1
	at arrays.primitives.set_negative_array_index_should_throw_err.SetNegativeArrayIndexShouldThrowErrMain.main(SetNegativeArrayIndexShouldThrowErrMain.java:5)
